# morse_ros

./: README  stack.xml
human_nav_node/: CMakeLists.txt  Makefile  mainpage.dox  manifest.xml
human_nav_node/include/: display.h  genBasicStruct.h  globalVars.h  mhpCompileFlags.h  mhpConst.h  mhpError.h  mhpStruct.h  mhpm3d.h
human_nav_node/include/human_nav_node/: MotionPlanner.h  NavigationNode.h
human_nav_node/launch/: morsedefault.launch  morsedefaultnoviz.launch  noworld.launch
human_nav_node/msg/: HumanState.msg  Move3dInterfaceParams.msg  NavigationPlanRequest.msg
human_nav_node/src/: MotionPlanner.cpp  NavigationNode.cpp  PlannerException.cpp
human_nav_node/src/codels/: README.TXT  mhpEnvironmentCodels.cc  mhpInterfaceTaskCodels.cc  mhpMainTaskCodels.cc  mhpManipulationCodels.cc  mhpNavigationCodels.cc
human_nav_node/src/human_nav_node/: .gitignore
human_nav_node/src/test/: testclient.py
human_nav_node/srv/: ChangeCamPos.srv  ChangeInterfaceParams.srv  HANaviPlan.srv  InitScenario.srv  InitWorld.srv
human_nav_node/test/: testclient.py
human_nav_plugin/: .cproject  .project  .pydevproject  CMakeLists.txt  cmake_install.cmake  human_nav_plugin.xml  mainpage.dox  manifest.xml
human_nav_plugin/src/: Move3dXmlRpcClient.cpp  Moved3dXmlRpcClient.cpp  human_aware_navigation.cpp  talker.cpp
jido_move_head/: CMakeLists.txt  cmake_install.cmake  mainpage.dox  manifest.xml
jido_move_head/action/: move_head.action
jido_move_head/launch/: move_head.launch
jido_move_head/msg/: move_headAction.msg  move_headActionFeedback.msg  move_headActionGoal.msg  move_headActionResult.msg  move_headFeedback.msg  move_headGoal.msg  move_headResult.msg
jido_move_head_client/: CMakeLists.txt  mainpage.dox  manifest.xml
kitchen_data_player/: mainpage.dox  manifest.xml
kuka_arm/: mainpage.dox  manifest.xml
laas_assets/: .gitignore  Makefile  mainpage.dox  manifest.xml
morse/: .gitignore  Makefile  mainpage.dox  manifest.xml
morse_2dnav/: CMakeLists.txt  README  mainpage.dox  manifest.xml
morse_2dnav_simple/: mainpage.dox  manifest.xml
morse_bielefeld/: mainpage.dox  manifest.xml
morse_blender/: .gitignore  Makefile  mainpage.dox  manifest.xml
morse_jido_manipulation_action/: .gitignore  CMakeLists.txt  mainpage.dox  manifest.xml  manifest.xml~
morse_msgs/: CMakeLists.txt  mainpage.dox  manifest.xml
morse_pyyaml/: .gitignore  Makefile  mainpage.dox  manifest.xml
morse_tf/: mainpage.dox
waypoint_follower/: .gitignore  CMakeLists.txt  human_nav_plugin.xml  mainpage.dox  manifest.xml  wp_follow_plugin.xml
(+245 files in other folders)
